消费失败后，使用死信队列重新入工作队列，达到重试目的

--- a/dead-letter/src/main/resources/application.properties
+++ b/dead-letter/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-
+server.port=8081
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
